test/functions/ferguson/query/query-generic-type-leaf-borrowed.good
query-generic-type-leaf-borrowed.chpl:34: error: unresolved call 'f(Wrapper(OtherGenericClass(int(64))))'
query-generic-type-leaf-borrowed.chpl:15: note: this candidate did not match: f(x: Wrapper(borrowed GenericClass))
query-generic-type-leaf-borrowed.chpl:15: note: because where clause evaluated to false
query-generic-type-leaf-borrowed.chpl:12: note: candidates are: Wrapper.f
